Update Part of IMG CSGROUP FOOTER

--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
           <a class="logo d-flex align-items-center">
             <span class="">PT. ABUDISA PERKASA INDONESIA</span>
           </a>
-          <div class="footer-title footer-title__partof">part of <img src="assets/img/logo_CSGroup.png" alt="img-alt" title="img-title"></div>
+          <div class="footer-title footer-title__partof">part of <img src="assets/img/logo_CSGROUP.png" alt="img-alt" title="img-title"></div>
           <div class="footer-contact pt-3">
             <p>Jl. Babakan Jati No.93, Gumuruhm Kota Bandung</p>
             <p>Jawa Barat ID 40275</p>
