Update Bagian Pricing di Takedown Sementara

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
     </section><!-- /More Features Section -->
 
-    <!-- Pricing Section -->
+    <!-- <!-- Pricing Section -->
     <section id="pricing" class="pricing section">
 
       <!-- Section Title -->
@@ -576,7 +576,7 @@
 
       </div>
 
-    </section><!-- /Pricing Section -->
+    </section><!-- /Pricing Section --> -->
 
     <!-- Faq Section -->
     <section id="faq" class="faq section">
