Update Bagian Pricing di Takedown Sementara

--- a/index.html
+++ b/index.html
@@ -499,18 +499,16 @@
 
       </div>
 
-    </section><!-- /More Features Section -->
+    <!-- Pricing Section
+    <section id="pricing" class="pricing section"> -->
 
-    <!-- <!-- Pricing Section -->
-    <section id="pricing" class="pricing section">
-
-      <!-- Section Title -->
+      <!-- Section Title
       <div class="container section-title" data-aos="fade-up">
         <h2>Pricing</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      </div> End Section Title -->
 
-      <div class="container">
+      <!--<div class="container">
 
         <div class="row gy-4">
 
@@ -531,9 +529,9 @@
                 <li class="na"><i class="bi bi-x"></i> <span>Iure nihil dolores recusandae odit voluptatibus</span></li>
               </ul>
             </div>
-          </div><!-- End Pricing Item -->
+          </div> End Pricing Item -->
 
-          <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
+          <!--<div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="pricing-item featured">
               <p class="popular">Popular</p>
               <h3>Business Plan</h3>
@@ -551,9 +549,9 @@
                 <li class="na"><i class="bi bi-x"></i> <span>Iure nihil dolores recusandae odit voluptatibus</span></li>
               </ul>
             </div>
-          </div><!-- End Pricing Item -->
+          </div> End Pricing Item -->
 
-          <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
+          <!--<div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="pricing-item">
               <h3>Developer Plan</h3>
               <p class="description">Ullam mollitia quasi nobis soluta in voluptatum et sint palora dex strater</p>
@@ -570,13 +568,13 @@
                 <li><i class="bi bi-check"></i> <span>Iure nihil dolores recusandae odit voluptatibus</span></li>
               </ul>
             </div>
-          </div><!-- End Pricing Item -->
+          </div> End Pricing Item -->
 
-        </div>
+        <!--</div>
 
       </div>
 
-    </section><!-- /Pricing Section --> -->
+    </section> /Pricing Section -->
 
     <!-- Faq Section -->
     <section id="faq" class="faq section">
