--- a/index.html
+++ b/index.html
@@ -194,7 +194,14 @@
 
     <!-- Clients Section -->
     <section id="clients" class="clients section">
-
+      <!-- Section Title -->
+      <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+        <h2>Mitra Kami</h2>
+        <p>Mitra-Mitra Kami Yang Bersinergi
+        </p>
+      </div>
+      <!-- End Section Title -->
+      
       <div class="container" data-aos="fade-up">
 
         <div class="row gy-4">
