Update Asset 3 Gambar Who We Are

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <img src="assets/img/2149595831-2.jpg" class="img-fluid" alt="">
                   </div>
                   <div class="col-lg-12">
-                    <img src="assets/img/1357667982-3.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/125554-3.jpg" class="img-fluid" alt="">
                   </div>
                 </div>
               </div>
