--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Features</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Portofolio</h2>
+        <p>Beberapa Hasil Karya Kami</p>
       </div><!-- End Section Title -->
 
       <div class="container">
