Update Bagian Portofolio

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </li>-->
             </ul>
           </li>
-          <li><a href="index.html#Portofolio">Portofolio</a></li>
+          <li><a href="index.html#portofolio">Portofolio</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -229,7 +229,7 @@
     </section><!-- /Clients Section -->
 
     <!-- Features Section -->
-    <section id="features" class="features section">
+    <section id="portofolio" class="features section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
