Update img client

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="row gy-4">
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
-            <img src="assets/img/clients/CSG.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/CSG.png" width='100%' class="img-fluid" alt="">
           </div><!-- End Client Item -->
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
