Update index.html section who we are

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
               Sebagai pembuat aplikasi dan situs web yang andal, kami berkomitmen untuk menyediakan layanan yang memenuhi kebutuhan unik dan tujuan bisnis masing-masing klien kami. Dengan menggunakan teknologi terbaru dan pendekatan kreatif, kami menciptakan pengalaman digital yang menakjubkan dan fungsional bagi pengguna Anda.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Reliable Experts.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Work With Happiness</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Flexible Prices.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>24/7 support.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Tenaga Ahli Handal</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Bekerja Dengan Kebahagiaan</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Harga Fleksibel</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Dukungan 24/7</span></li>
             </ul>
             <a href="#contact" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
           </div>
