Update index.html section who we are

--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
             <p class="fst-italic">
               Sebagai pembuat aplikasi dan situs web yang andal, kami berkomitmen untuk menyediakan layanan yang memenuhi kebutuhan unik dan tujuan bisnis masing-masing klien kami. Dengan menggunakan teknologi terbaru dan pendekatan kreatif, kami menciptakan pengalaman digital yang menakjubkan dan fungsional bagi pengguna Anda.
             </p>
+            <p class="fst-italic">
+              Kami mengutamakan kolaborasi yang erat dengan klien kami, memastikan bahwa setiap detail dari proyek kami sesuai dengan visi dan harapan mereka. Jadi, jika Anda mencari pembuat aplikasi dan website Bandung yang dapat diandalkan untuk mengubah ide Anda menjadi kenyataan digital, Anda telah menemukan tempat yang tepat. Hubungi kami hari ini untuk memulai perjalanan digital Anda bersama kami.
+            </p>  
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>Tenaga Ahli Handal</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Bekerja Dengan Kebahagiaan</span></li>
