--- a/index.html
+++ b/index.html
@@ -680,24 +680,24 @@
           </div><!-- End Client Item -->
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/Bimasakti.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/CAGRI.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
-
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
-            <img src="assets/img/clients/CIWORKS.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
-
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
-            <img src="assets/img/clients/KOACI.png" class="img-fluid" alt="">
           </div><!-- End Client Item -->
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/POLBAN.png" class="img-fluid" alt="">
           </div><!-- End Client Item -->
 
-          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/CIWORKS.png" class="img-fluid" alt="">
+          </div> End Client Item -->
+
+          <!-- <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/ALIBABA.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div> End Client Item -->
 
         </div>
 
