Update index.html section portofolio

--- a/index.html
+++ b/index.html
@@ -419,10 +419,9 @@
                 <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1">
                   <i class="bi bi-binoculars"></i>
                   <div>
-                    <h4 class="d-none d-lg-block">Modi sit est dela pireda nest</h4>
+                    <h4 class="d-none d-lg-block">Aplikasi Website</h4>
                     <p>
-                      Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                      velit esse cillum dolore eu fugiat nulla pariatur
+                      Proyek aplikasi website yang telah dikerjakan meliputi pengembangan platform responsif, fitur interaktif, dan desain UI/UX modern. Fokus pada fungsionalitas, efisiensi, dan pengalaman pengguna optimal.
                     </p>
                   </div>
                 </a>
@@ -431,10 +430,9 @@
                 <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-2">
                   <i class="bi bi-box-seam"></i>
                   <div>
-                    <h4 class="d-none d-lg-block">Unde praesenti mara setra le</h4>
+                    <h4 class="d-none d-lg-block">Sistem Informasi</h4>
                     <p>
-                      Recusandae atque nihil. Delectus vitae non similique magnam molestiae sapiente similique
-                      tenetur aut voluptates sed voluptas ipsum voluptas
+                      Projek sistem informasi mencakup pengembangan aplikasi berbasis web untuk manajemen data, optimasi alur kerja, dan integrasi fitur analitik, membantu klien meningkatkan efisiensi operasional.
                     </p>
                   </div>
                 </a>
@@ -443,10 +441,9 @@
                 <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-3">
                   <i class="bi bi-brightness-high"></i>
                   <div>
-                    <h4 class="d-none d-lg-block">Pariatur explica nitro dela</h4>
+                    <h4 class="d-none d-lg-block">Produk Aplikasi</h4>
                     <p>
-                      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                      Debitis nulla est maxime voluptas dolor aut
+                     Projek pengembangan aplikasi inovatif untuk mempermudah manajemen tugas. Dilengkapi fitur kolaborasi real-time, antarmuka intuitif, dan kompatibilitas lintas perangkat untuk meningkatkan produktivitas.
                     </p>
                   </div>
                 </a>
