--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul>
           <li><a href="index.html#hero" class="active">Home</a></li>
           <li><a href="index.html#about">About</a></li>
-          <li class="dropdown"><a href="#"><span>Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><span>Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="index.html#services">Services</a></li>
               <li><a href="index.html#pricing">Pricing</a></li>
