Update index.html section icon portofolio

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <ul class="nav nav-tabs" data-aos="fade-up" data-aos-delay="100">
               <li class="nav-item">
                 <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1">
-                  <i class="bi bi-binoculars"></i>
+                  <i class="bi bi-globe"></i>
                   <div>
                     <h4 class="d-none d-lg-block">Aplikasi Website</h4>
                     <p>
@@ -428,7 +428,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-2">
-                  <i class="bi bi-box-seam"></i>
+                  <i class="bi bi-pie-chart-fill"></i>
                   <div>
                     <h4 class="d-none d-lg-block">Sistem Informasi</h4>
                     <p>
@@ -439,7 +439,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-3">
-                  <i class="bi bi-brightness-high"></i>
+                  <i class="bi bi-android2"></i>
                   <div>
                     <h4 class="d-none d-lg-block">Produk Aplikasi</h4>
                     <p>
