Update index.html tambah section client di navbar

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             </ul>
           </li>
           <li><a href="index.html#portofolio">Portofolio</a></li>
+          <li><a href="index.html#client">Client</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -552,7 +553,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-        <p>What Our Clients Say About Our Digital Services</p>
+        <p>Apa Kata Klien Kami Tentang Layanan Digital Kami</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -674,7 +675,7 @@
     </section><!-- /Testimonials Section -->
 
     <!-- Clients Section -->
-    <section id="clients" class="clients section">
+    <section id="client" class="clients section">
       <!-- Section Title -->
       <div class="container section-title aos-init aos-animate" data-aos="fade-up">
         <h2>Mitra Kami</h2>
