--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Frequently Asked Questions</h2>
+        <h2>Pertanyaaan Yang Sering Diajukan</h2>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -735,17 +735,18 @@
             <div class="faq-container">
 
               <div class="faq-item faq-active">
-                <h3>Non consectetur a erat nam at lectus urna duis?</h3>
+                <h3>Apa itu Web Abudisa</h3>
                 <div class="faq-content">
-                  <p>Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+                  <p>Abudisa merupakan jasa pembuatan website profesional untuk bisnis maupun untuk profil portofolio kamu.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Feugiat scelerisque varius morbi enim nunc faucibus?</h3>
+                <h3>Bagaimana cara pemesanannya?</h3>
                 <div class="faq-content">
-                  <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+                  <p>Untuk pemesanan website di Web Abudisa sangatlah mudah. Cukup diskusi, pembayaran DP 50%, pengiriman konten, pengerjaan, revisi dan pelunasan.</p>
+                     <p>Klik untuk cek Syarat & Ketentuan Pemesanan Website</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
