--- a/index.html
+++ b/index.html
@@ -746,15 +746,16 @@
                 <h3>Bagaimana cara pemesanannya?</h3>
                 <div class="faq-content">
                   <p>Untuk pemesanan website di Web Abudisa sangatlah mudah. Cukup diskusi, pembayaran DP 50%, pengiriman konten, pengerjaan, revisi dan pelunasan.</p>
-                     <p>Klik untuk cek Syarat & Ketentuan Pemesanan Website</p>
+                  <p></p>
+                  <p>Klik untuk cek Syarat & Ketentuan Pemesanan Website</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Dolor sit amet consectetur adipiscing elit pellentesque?</h3>
+                <h3>Apakah sudah termasuk domain dan hosting?</h3>
                 <div class="faq-content">
-                  <p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis</p>
+                  <p>Ya. Paket yang ada di Web Agency sudah termasuk domain dan hositng unlimited.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
