Update index.html add section pertanyaan faq

--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                 <h3>Bagaimana cara pemesanannya?</h3>
                 <div class="faq-content">
                   <p>Untuk pemesanan website di Web Abudisa sangatlah mudah. Cukup diskusi, pembayaran DP 50%, pengiriman konten, pengerjaan, revisi dan pelunasan.</p>
-                  <br>
+                  <br></br>
                   <p>Klik untuk cek Syarat & Ketentuan Pemesanan Website</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
@@ -755,31 +755,23 @@
               <div class="faq-item">
                 <h3>Apakah sudah termasuk domain dan hosting?</h3>
                 <div class="faq-content">
-                  <p>Ya. Paket yang ada di Web Agency sudah termasuk domain dan hositng unlimited.</p>
+                  <p>Ya. Paket yang ada di Abudisa sudah termasuk domain dan hositng unlimited.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h3>
+                <h3>Apakah saya akan dapat akses website?</h3>
                 <div class="faq-content">
-                  <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+                  <p>Tentu. Kamu akan mendapatkan akses sesuai dengan paket yang diambil saat pemesanan website.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Tempus quam pellentesque nec nam aliquam sem et tortor?</h3>
+                <h3>Apakah boleh request desain custom sesuai referensi?</h3>
                 <div class="faq-content">
-                  <p>Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in</p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div><!-- End Faq item-->
-
-              <div class="faq-item">
-                <h3>Perspiciatis quod quo quos nulla quo illum ullam?</h3>
-                <div class="faq-content">
-                  <p>Enim ea facilis quaerat voluptas quidem et dolorem. Quis et consequatur non sed in suscipit sequi. Distinctio ipsam dolore et.</p>
+                  <p>Tentu saja. Kami akan sangat senang jika ada referensi website yang ingin dibangun, dan kami akan cek dahulu apa saja yang diperlukan.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
