Update index.html add section pertanyaan faq

--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
               <div class="faq-item">
                 <h3>Bagaimana cara pemesanannya?</h3>
                 <div class="faq-content">
-                  <p>Untuk pemesanan website di Web Abudisa sangatlah mudah. Cukup diskusi, pembayaran DP 50%, pengiriman konten, pengerjaan, revisi dan pelunasan.</p>
-                  <p>Klik untuk cek Syarat & Ketentuan Pemesanan Website</p>
+                  <p>Untuk pemesanan website di Web Abudisa sangatlah mudah. Cukup diskusi, pembayaran DP 50%, pengiriman konten, pengerjaan, revisi dan pelunasan.
+                  <br>Klik untuk cek Syarat & Ketentuan Pemesanan Website</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
