Update index.html add informasi dan layanan di footer

--- a/index.html
+++ b/index.html
@@ -898,8 +898,8 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Informasi</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about">About Us</a></li>
             <li><a href="/abudisa.beta2/service-details.html">Services Details</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
