--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
     </section><!-- /Services Section -->
 
-    <!-- More Features Section -->
+    <!-- More Features Section
     <section id="more-features" class="more-features section">
 
       <div class="container">
@@ -278,39 +278,39 @@
             <h3>Enim quis est voluptatibus aliquid consequatur</h3>
             <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi</p>
 
-            <div class="row">
+            <div class="row"> -->
 
-              <div class="col-lg-6 icon-box d-flex">
+              <!-- <div class="col-lg-6 icon-box d-flex">
                 <i class="bi bi-easel flex-shrink-0"></i>
                 <div>
                   <h4>Lorem Ipsum</h4>
                   <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias </p>
                 </div>
-              </div><!-- End Icon Box -->
+              </div> End Icon Box -->
 
-              <div class="col-lg-6 icon-box d-flex">
+              <!-- <div class="col-lg-6 icon-box d-flex">
                 <i class="bi bi-patch-check flex-shrink-0"></i>
                 <div>
                   <h4>Nemo Enim</h4>
                   <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiise</p>
                 </div>
-              </div><!-- End Icon Box -->
+              </div> End Icon Box -->
 
-              <div class="col-lg-6 icon-box d-flex">
+              <!-- <div class="col-lg-6 icon-box d-flex">
                 <i class="bi bi-brightness-high flex-shrink-0"></i>
                 <div>
                   <h4>Dine Pad</h4>
                   <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit</p>
                 </div>
-              </div><!-- End Icon Box -->
+              </div> End Icon Box -->
 
-              <div class="col-lg-6 icon-box d-flex">
+              <!-- <div class="col-lg-6 icon-box d-flex">
                 <i class="bi bi-brightness-high flex-shrink-0"></i>
                 <div>
                   <h4>Tride clov</h4>
                   <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit</p>
                 </div>
-              </div><!-- End Icon Box -->
+              </div> End Icon Box
 
             </div>
 
@@ -322,7 +322,7 @@
 
         </div>
 
-      </div>
+      </div>-->
 
     <!-- Pricing Section
     <section id="pricing" class="pricing section"> -->
