--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
     </section><!-- /Features Section -->
 
-    <!-- Features Details Section -->
+    <!-- Features Details Section
     <section id="features-details" class="features-details section">
 
       <div class="container">
@@ -515,7 +515,8 @@
             </div>
           </div>
 
-        </div><!-- Features Item -->
+        </div> -->
+        <!-- Features Item
 
         <div class="row gy-4 justify-content-between features-item">
 
@@ -541,11 +542,11 @@
             <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
           </div>
 
-        </div><!-- Features Item -->
+        </div> Features Item
 
       </div>
 
-    </section><!-- /Features Details Section -->
+    </section>Features Details Section -->
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section light-background">
