--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
           <li><a href="index.html#about">About</a></li>
           <li class="dropdown"><span>Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="index.html#services">Services</a></li>
-              <li><a href="index.html#pricing">Pricing</a></li>
+              <li><a href="#services">Web Design</a></li>
+              <li><a href="#services">Web Development</a></li>
+              <li><a href="#services">Product Management</a></li>
+              <li><a href="#services">Marketing</a></li>
+              <li><a href="#services">Graphic Design</a></li>
               <!--<li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
