Update index.html add asset our client

--- a/index.html
+++ b/index.html
@@ -703,6 +703,10 @@
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/CAGRI.png" class="img-fluid" alt="">
           </div><!-- End Client Item -->
+          
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/ciwafoundation.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
             <img src="assets/img/clients/POLBAN.png" class="img-fluid" alt="">
