Update index.html section informasi footer

--- a/index.html
+++ b/index.html
@@ -908,9 +908,8 @@
           <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="/abudisa.beta2/service-details.html">Services Details</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="/pemesanan.html">Pemesanan</a></li>
+            <li><a href="/syarat-ketentuan.html">Syarat & Ketentuan</a></li>
           </ul>
         </div>
 
