--- a/syarat-ketentuan.html
+++ b/syarat-ketentuan.html
@@ -367,8 +367,8 @@
           <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="/pemesanan.html">Pemesanan</a></li>
-            <li><a href="/syarat-ketentuan.html">Syarat & Ketentuan</a></li>
+            <li><a href="/redesainabudisa/pemesanan.html">Pemesanan</a></li>
+            <li><a href="/redesainabudisa/syarat-ketentuan.html">Syarat & Ketentuan</a></li>
           </ul>
         </div>
 
