--- a/pemesanan.html
+++ b/pemesanan.html
@@ -132,7 +132,7 @@
             </div><!-- End Services List -->
           </div>
 
-          <p>Untuk memberikan kenyamanan kepada klien, terdapat syarat dan ketentuan yang berlaku. Ketika melakukan pemesanan website di Abudisa, maka klien wajib menyetujui syarat dan ketentuan tersebut. Klik <a href="/syarat-ketentuan.html">disini </a> untuk detail.</p>
+          <p>Untuk memberikan kenyamanan kepada klien, terdapat syarat dan ketentuan yang berlaku. Ketika melakukan pemesanan website di Abudisa, maka klien wajib menyetujui syarat dan ketentuan tersebut. Klik <a href="/redesainabudisa/syarat-ketentuan.html">disini </a> untuk detail.</p>
 
             <!--<div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
