--- a/syarat-ketentuan.html
+++ b/syarat-ketentuan.html
@@ -365,8 +365,8 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Informasi</h4>
           <ul>
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#about">About Us</a></li>
+            <li><a href="index.html#hero">Home</a></li>
+            <li><a href="index.html#about">About Us</a></li>
             <li><a href="/redesainabudisa/pemesanan.html">Pemesanan</a></li>
             <li><a href="/redesainabudisa/syarat-ketentuan.html">Syarat & Ketentuan</a></li>
           </ul>
@@ -375,11 +375,11 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Layanan</h4>
           <ul>
-            <li><a href="#services">Web Design</a></li>
-            <li><a href="#services">Web Development</a></li>
-            <li><a href="#services">Product Management</a></li>
-            <li><a href="#services">Marketing</a></li>
-            <li><a href="#services">Graphic Design</a></li>
+            <li><a href="index.html#services">Web Design</a></li>
+            <li><a href="index.html#services">Web Development</a></li>
+            <li><a href="index.html#services">Product Management</a></li>
+            <li><a href="index.html#services">Marketing</a></li>
+            <li><a href="index.html#services">Graphic Design</a></li>
           </ul>
         </div>
 
